objects/Product_Family__c.object
<CustomObject>
    <fields>
        <fullName>Enterprise_Agreement_Opportunity__c</fullName>
        <label>Enterprise Agreement Opportunity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Quote Integration: Indicate if Product Family is active/present in EDW</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family_Description__c</fullName>
        <description>Quote Integration: Product Family Description from EDW via Informatica</description>
        <label>Product Family Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Recurring__c</fullName>
        <label>Product Family Recurring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                    <isActive>false</isActive>
                    <label>M</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
                <value>
                    <fullName>True</fullName>
                    <isActive>false</isActive>
                    <label>True</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <isActive>false</isActive>
                    <label>Y</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_Status__c</fullName>
        <label>Product Family Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>OBSOLETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote Integration: Links Product Family with Product2 Object via Informatica</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Families</relationshipLabel>
        <relationshipName>Product_Families</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_with_Product_Family__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Quote Integration: Unique Key concatenating Products with Product Family Code/Id</description>
        <externalId>true</externalId>
        <label>Product with Product Family</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Searchable__c</fullName>
        <description>Flags if a Product Family l is available for search based on bookings data.</description>
        <label>Searchable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Quote Integration: Master List of Product Families integrated via Informatica</description>
    <label>Product Family</label>
    <nameField>
        <label>Product Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Family_Description__c</columns>
        <columns>Enterprise_Agreement_Opportunity__c</columns>
        <columns>Product_Family_Recurring__c</columns>
        <columns>Product_Family_Status__c</columns>
        <columns>Searchable__c</columns>
        <columns>Product_with_Product_Family__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ea_yes</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>Enterprise_Agreement_Opportunity__c</columns>
        <columns>Product_Family_Recurring__c</columns>
        <columns>Product_Family_Status__c</columns>
        <columns>Product_Family_Description__c</columns>
        <columns>Product_with_Product_Family__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enterprise_Agreement_Opportunity__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All-ea yes</label>
        <language>en_US</language>
    </listViews>
</CustomObject>